Minor icon shifting bug fix

--- a/customer-portal/src/app/Core/Components/TopNavBarFeature/top-nav-bar-feature.component.scss
+++ b/customer-portal/src/app/Core/Components/TopNavBarFeature/top-nav-bar-feature.component.scss
@@ -71,7 +71,6 @@ $accent: map-get($theme, accent);
 }
 
 .svg-icon {
-    vertical-align: top;
     max-height: 17px;
 }
 
